--- a/src/app/components/signal-form/signal-form.component.css
+++ b/src/app/components/signal-form/signal-form.component.css
@@ -1,7 +1,15 @@
-.container {
-  max-width: 800px;
-  margin: 2rem auto;
+.page-container {
+  display: flex;
+  gap: 2rem;
+  justify-content: center;
   padding: 2rem;
+}
+
+.container {
+  /* max-width: 800px; */
+  /* margin: 2rem auto; */
+  padding: 2rem;
+  width: 30%;
   background: var(--surface-card, #fff);
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
